@@ -1,3 +1,8 @@
+2008-10-20  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatarsay (process_script):
+	fix handling of initialisation
+
 2008-10-13  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.pas (BalloonSize, BalloonHeight, BalloonWidth):
